--- a/css/everything.css
+++ b/css/everything.css
@@ -9,33 +9,33 @@ body{
 #result1 { background:#000;color:#ffde59;font-size:135%;margin-top:8em;padding:25px;z-index:10;margin-top:-150px;}
 #headline { font-size:250%; padding-top:0.35em; color:white;font-family: "Century Gothic", sans-serif;text-transform: uppercase;}
 body { background: rgb(55,196,192);
-background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%);}
-#varnote { font-size:40px;text-align:center;padding-bottom:1.5rem; }
-.icons > input
-{
+  background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%);}
+  #varnote { font-size:40px;text-align:center;padding-bottom:1.5rem; }
+  .icons > input
+  {
     display: none;
-}
+  }
 
-.icons
-{
-  position: absolute;
-  right: 0;
-  top: 3em;
-}
+  .icons
+  {
+    position: absolute;
+    right: 0;
+    top: 3em;
+  }
 
-.fas {
-  font-size: 3em;
-  text-shadow: 2px 2px #000;
-  cursor: pointer;
-  user-select: none;
-  color:white;
-}
+  .fas {
+    font-size: 3em;
+    text-shadow: 2px 2px #000;
+    cursor: pointer;
+    user-select: none;
+    color:white;
+  }
 
-.fas:hover {
-  color: grey;
-}
+  .fas:hover {
+    color: grey;
+  }
 
-#logo{
+  #logo{
     background-image:url('');
     background-size:cover;
     background-position: center;
@@ -45,10 +45,10 @@ background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%)
     padding-right: 50%;
     resize:both;
     /*border:0px;*/
-}
+  }
 
-/* begin base styles */
-/* https://milligram.github.io/ */
+  /* begin base styles */
+  /* https://milligram.github.io/ */
 /*@import url('//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap');
@@ -261,11 +261,11 @@ span{
 .resize-container { }
 
 .resize-container {
-    position: relative;
-    display:none;
-    //display: inline-block;
-    cursor: move;
-    margin: 0 auto;
+  position: relative;
+  display:none;
+  //display: inline-block;
+  cursor: move;
+  margin: 0 auto;
 }
 
 .resize-container-ontop {
@@ -278,48 +278,48 @@ span{
 }
 
 .resize-container img {
-    display: block;
+  display: block;
 }
 
 .resize-container:hover img,
 .resize-container:active img {
-    outline: 2px dashed rgba(0,0,0,.9);
+  outline: 2px dashed rgba(0,0,0,.9);
 }
 
 .resize-handle-ne,
 .resize-handle-se,
 .resize-handle-nw,
 .resize-handle-sw {
-    position: absolute;
-    display: block;
-    width: 10px;
-    height: 10px;
-    background: rgba(0,0,0,.9);
-    z-index: 9;
+  position: absolute;
+  display: block;
+  width: 10px;
+  height: 10px;
+  background: rgba(0,0,0,.9);
+  z-index: 9;
 }
 
 .resize-handle-nw {
-    top: -5px;
-    left: -5px;
-    cursor: nw-resize;
+  top: -5px;
+  left: -5px;
+  cursor: nw-resize;
 }
 
 .resize-handle-sw {
-    bottom: -5px;
-    left: -5px;
-    cursor: sw-resize;
+  bottom: -5px;
+  left: -5px;
+  cursor: sw-resize;
 }
 
 .resize-handle-ne {
-    top: -5px;
-    right: -5px;
-    cursor: ne-resize;
+  top: -5px;
+  right: -5px;
+  cursor: ne-resize;
 }
 
 .resize-handle-se {
-    bottom: -5px;
-    right: -5px;
-    cursor: se-resize;
+  bottom: -5px;
+  right: -5px;
+  cursor: se-resize;
 }
 
 .top-overlay {
@@ -379,7 +379,7 @@ span{
   z-index: 9;
   width: 100%;
   height: 100%;
-    /*border: solid 2px rgba(222,222,222,.9);*/
+  /*border: solid 2px rgba(222,222,222,.9);*/
   box-sizing: content-box;
   pointer-events: none;
 }
@@ -422,4 +422,8 @@ span{
 .btn-crop img {
   vertical-align: middle;
   margin-left: 8px;
+}
+
+.fa{
+  padding-left: 1rem;
 }
