--- a/css/everything.css
+++ b/css/everything.css
@@ -7,9 +7,12 @@ body{
 #namesbox { min-height:320px;font-size:32px;color:#333;resize:both;border:1px solid #F39C12; }
 .extra { font-size:16px;margin-top:20px; }
 #result1 { background:#000;color:#ffde59;font-size:135%;margin-top:8em;padding:25px;z-index:10;margin-top:-150px;}
-#headline { font-size:250%; padding-top:0.35em; color:white;font-family: "Century Gothic", sans-serif;text-transform: uppercase;}
-body { background: rgb(55,196,192);
-  background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%);}
+/*#headline { font-size:250%; padding-top:0.35em; color:white;font-family: "Century Gothic", sans-serif;text-transform: uppercase;}*/
+#headline { font-size:250%; padding-top:0.35em; color:black;font-family: "Century Gothic", sans-serif;text-transform: uppercase;}
+body { /*background: rgb(55,196,192);*/
+  background: rgb(255,255,255);
+  /*background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%);*/
+}
   #varnote { font-size:40px;text-align:center;padding-bottom:1.5rem; }
   .icons > input
   {
@@ -176,15 +179,17 @@ span{
   /*border: 3px solid #66FCF1;*/
   border:none;
   box-shadow:none;
-  color:#66FCF1;
+  /*color:#66FCF1;*/
+  color:#000;
   text-transform: uppercase;
   font-weight: 200;
   letter-spacing: .1rem;
 }
 
 .button:hover{
-  background-color:#66FCF1;
-  color: black;
+  /*background-color:#66FCF1;*/
+  background-color:#000;
+  color: #fff;
 }
 
 .reset:hover{
@@ -197,12 +202,14 @@ span{
   margin-left: auto;
   margin-right: auto;
   font-size:2em;
-  color:#66FCF1;
+  /*color:#66FCF1;*/
+  color:#000;
   text-align:center;
 }
 
 .roll:hover{
-  background-color:#66FCF1;
+  background-color:#000;
+  color: white;
 }
 
 .tooltip {
@@ -247,12 +254,12 @@ span{
   letter-spacing: 2px;
   border-radius: 0.5rem;
   border: 3px solid #66FCF1;
-  border-color: white;
-  color:white;
+  border-color: black;
+  color:black;
 }
 
 .crop-wrapper {
-  background-color:rgba(255,255,255,0.1);
+  background-color:rgba(0,0,0,0.1);
   position:relative;
   width:100%;
   height:50vh;
@@ -424,6 +431,6 @@ span{
   margin-left: 8px;
 }
 
-.fa{
+.space{
   padding-left: 1rem;
 }
