--- a/css/everything.css
+++ b/css/everything.css
@@ -258,6 +258,11 @@ span{
   color:black;
 }
 
+#rm{
+  border-color: white;
+  color:white;
+}
+
 .crop-wrapper {
   background-color:rgba(0,0,0,0.1);
   position:relative;
